// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a default input 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render as custom element 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <select
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with addons 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <span>
      start
    </span>
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span>
          end
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with focus 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with invalid 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
    >
      <span
        data-errortext="Field invalid"
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
